{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 90,
  "lineage": "ddbfe231-d48d-864b-6c16-c4f2a206050c",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/networkSecurityGroups/mywebapp-database-nsg",
            "location": "eastus2",
            "name": "mywebapp-database-nsg",
            "resource_group_name": "AzureTaskRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowWebServerAccess",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_subnet.web",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/networkSecurityGroups/mywebapp-web-nsg",
            "location": "eastus2",
            "name": "mywebapp-web-nsg",
            "resource_group_name": "AzureTaskRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet/subnets/mywebapp-database-subnet",
            "name": "mywebapp-database-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AzureTaskRG",
            "virtual_network_name": "mywebapp-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet/subnets/mywebapp-web-subnet",
            "name": "mywebapp-web-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AzureTaskRG",
            "virtual_network_name": "mywebapp-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet/subnets/mywebapp-database-subnet",
            "network_security_group_id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/networkSecurityGroups/mywebapp-database-nsg",
            "subnet_id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet/subnets/mywebapp-database-subnet"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.database",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_subnet.web",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet/subnets/mywebapp-web-subnet",
            "network_security_group_id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/networkSecurityGroups/mywebapp-web-nsg",
            "subnet_id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet/subnets/mywebapp-web-subnet"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.web",
            "module.network.azurerm_subnet.web",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3df438b0-b4a0-4779-864b-606a4af17af8",
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet",
            "location": "eastus2",
            "name": "mywebapp-vnet",
            "resource_group_name": "AzureTaskRG"
          }
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/networkInterfaces/mywebapp-web-nic",
            "internal_domain_name_suffix": "wa2pipnawr2upbslmbvev2l05a.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/publicIPAddresses/mywebapp-web-public-ip",
                "subnet_id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/virtualNetworks/mywebapp-vnet/subnets/mywebapp-web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "mywebapp-web-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "AzureTaskRG"
          },
          "dependencies": [
            "module.network.azurerm_subnet.web",
            "module.network.azurerm_virtual_network.main",
            "module.vm.azurerm_public_ip.web"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e2418e71-b878-491f-8211-0c18b34b9809/resourceGroups/AzureTaskRG/providers/Microsoft.Network/publicIPAddresses/mywebapp-web-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "mywebapp-web-public-ip",
            "resource_group_name": "AzureTaskRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    }
  ]
}